# streaming_platform

./: README.md
streaming_client/: .prettierrc  bun.lockb  package.json  svelte.config.js  tsconfig.json  vite.config.ts
streaming_client/src/: app.css  app.d.ts  app.html  error.html  hooks.server.ts
streaming_client/src/lib/: checkPermission.ts  index.ts  permissionGuard.ts  permissions.ts  types.ts  utils.ts
streaming_client/src/lib/components/: +SaveAddEpisode.svelte  +SaveAddRole.svelte  AddButtons.svelte  LogsList.svelte  SaveAddNews.svelte  SaveButtons.svelte
streaming_client/src/lib/components/insufficient-permissions/: +page.svelte
streaming_client/src/lib/data/admin/: delete.ts  get.ts  patch.ts  post.ts
streaming_client/src/lib/server/: +server.ts  get.ts  main_page.ts  patch.ts  post.ts  server_utils.ts  types.ts
streaming_client/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte
streaming_client/src/routes/about/: +page.svelte
streaming_client/src/routes/admin/: +layout.server.ts  +layout.svelte  +page.svelte
streaming_client/src/routes/anime/: +page.svelte
streaming_client/src/routes/news/: +page.server.ts  +page.svelte
streaming_server/: Cargo.toml  bacon.toml  rocket.toml
streaming_server/src/: config.rs  lib.rs  main.rs  mappers.rs  models.rs  serializers.rs  settings.rs  utils.rs
streaming_server/src/data/: auth.rs  delete.rs  get.rs  mod.rs  patch.rs  post.rs
streaming_server/src/to_serialize/: anime.rs  episodes.rs  logging.rs  mod.rs  roles.rs  studio.rs  tags.rs  users.rs
(+53 files in other folders)
