[package]
name = "teacup_api"
version = "0.1.0"
edition = "2024"




[dependencies]
# ...existing code...
webp = "0.3.0"
rocket = { version = "0.5.1", features = ["secrets", "json"] }
surrealdb = "2.3.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
argon2 = "0.5.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
slugify = "0.1.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.11.1"
serde_json = "1.0.140"
image = "0.25"
url = "2.5"
juli_orm_core = { path="../../../rustlibs/juli/juli_orm_core"}
juli_orm = { path="../../../rustlibs/juli/juli_orm"}
ammonia = "4.1.1"
once_cell = "1.21.3"
serde_yaml = "0.9.34"
rand = "0.8"


[profile.release]
opt-level = 3        
lto = true             
codegen-units = 1    
panic = "abort"       
strip = "symbols"  

